--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 
 
-
+server.port = 8090
 #setting jpa
 spring.jpa.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
